# DevToolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
devtoolkit/: __init__.py  main.py
devtoolkit/core/: __init__.py  plugin.py
devtoolkit/tools/: __init__.py  base64tool.py  baseconv.py  colorconv.py  cronhelp.py  dice.py  epoch.py  hashit.py  jsonfmt.py  lorem.py  note.py  passgen.py  rot13.py  sysinfo.py  timer.py  uuidgen.py  weather.py  webui.py  wordcount.py
